# vgi-recommender

./: CLAUDE.md  Makefile  README.md  conftest.py  pyproject.toml  recommender_worker.py
.github/workflows/: ci.yml
ci/: README.md  run-integration.sh
test/sql/: recommender.test
tests/: data.py  harness.py  test_client.py  test_recommender.py  test_tables.py
vgi_recommender/: __init__.py  buffering.py  recommender.py  schema_utils.py  tables.py  worker.py
