[project]
name = "vgi-recommender"
version = "0.1.0"
description = "Collaborative-filtering recommendations (implicit-feedback ALS) for DuckDB via VGI"
readme = "README.md"
keywords = [
    "duckdb",
    "apache-arrow",
    "vgi",
    "sql",
    "recommender-system",
    "collaborative-filtering",
    "implicit-feedback",
    "alternating-least-squares",
    "als",
    "implicit",
]
license = { file = "LICENSE" }
authors = [{ name = "Query Farm LLC", email = "hello@query.farm" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.13"
dependencies = [
    "vgi-python>=0.8.3",
    "implicit>=0.7",
    "scipy",
    "numpy",
    "pandas",
    "pyarrow",
]

[project.optional-dependencies]
# HTTP transport: the worker can serve over HTTP (`recommender_worker.py --http`)
# in addition to stdio. That path needs vgi-python's `http` extra (waitress).
# CI's http transport leg installs this via `uv sync --extra http`.
http = [
    "vgi-python[http]>=0.8.3",
]
dev = [
    "pytest>=8",
    "ruff",
    "mypy",
    "pydoclint",
]

[project.scripts]
vgi-recommender = "vgi_recommender.worker:main"
vgi-recommender-http = "vgi_recommender.worker:main_http"

[project.urls]
Homepage = "https://query.farm"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vgi_recommender"]

[tool.hatch.build.targets.sdist]
include = [
    "vgi_recommender/",
    "recommender_worker.py",
    "conftest.py",
    "tests/",
    "test/",
    "README.md",
    "CLAUDE.md",
    "LICENSE",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "D"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"

[tool.pydoclint]
style = "google"
arg_type_hints_in_docstring = false
check_return_types = false
check_yield_types = false
check_class_attributes = true
skip_checking_raises = true
allow_init_docstring = true

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_ignores = true

# Genuinely untyped third-party libraries (no stubs / no py.typed marker).
[[tool.mypy.overrides]]
module = [
    "implicit.*",
    "scipy.*",
    "pandas",
    "pandas.*",
]
ignore_missing_imports = true
